// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render different card accents should render component as expected (1) 1`] = `
<gux-card>
  <template shadowrootmode="open">
    <div class="gux-bordered gux-card">
      <slot></slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;

exports[`#render different card accents should render component as expected (2) 1`] = `
<gux-card accent="bordered">
  <template shadowrootmode="open">
    <div class="gux-bordered gux-card">
      <slot></slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;

exports[`#render different card accents should render component as expected (3) 1`] = `
<gux-card accent="raised">
  <template shadowrootmode="open">
    <div class="gux-card gux-raised">
      <slot></slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;

exports[`#render different card accents should render component as expected (4) 1`] = `
<gux-card accent="borderless">
  <template shadowrootmode="open">
    <div class="gux-borderless gux-card">
      <slot></slot>
    </div>
  </template>
  <span>
    This is a content slot
  </span>
</gux-card>
`;
